--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,6 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-vender/*
-
-
-
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -57,3 +52,9 @@ fabric.properties
 
 
 
+.idea/inspectionProfiles/
+.idea/modules.xml
+.idea/ultimate-test-suite.iml
+.idea/vcs.xml
+bin/
+vendor/
