--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require-dev": {
         "behat/behat": "^3.5",
         "phpspec/phpspec": "^4.0",
-        "behat/mink": "^1.7"
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.3"
     },
 
     "config": {
